ELS Code/main/default/objects/Joomla__c/Joomla__c.object-meta.xml
<CustomObject>
    <label>Joomla</label>
    <nameField>
        <displayFormat>J-{000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Joomla</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>