ELS Code/main/default/objects/Joomla__c/fields/How_Did_You_Hear_About_Us__c.field-meta.xml
<CustomField>
    <fullName>How_Did_You_Hear_About_Us__c</fullName>
    <label>How Did You Hear About Us</label>
    <type>TextArea</type>
</CustomField>