ELS Code/main/default/objects/Joomla__c/fields/PF2__c.field-meta.xml
<CustomField>
    <fullName>PF2__c</fullName>
    <formula>Cell_Phone__c  &amp;  First_Name__c</formula>
    <label>PF2</label>
    <type>Text</type>
</CustomField>