ELS Code/main/default/objects/Joomla__c/fields/PL2__c.field-meta.xml
<CustomField>
    <fullName>PL2__c</fullName>
    <formula>Cell_Phone__c  &amp;  Last_Name__c</formula>
    <label>PL2</label>
    <type>Text</type>
</CustomField>