ELS Code/main/default/objects/Joomla__c/fields/PL__c.field-meta.xml
<CustomField>
    <fullName>PL__c</fullName>
    <formula>Phone__c  &amp;  Last_Name__c</formula>
    <label>PL</label>
    <type>Text</type>
</CustomField>