ELS Code/main/default/objects/Joomla__c/fields/Property_Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Property_Interested_In__c</fullName>
    <label>Property Interested In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>