ELS Code/main/default/objects/Joomla__c/fields/RV_Joomla_ID__c.field-meta.xml
<CustomField>
    <fullName>RV_Joomla_ID__c</fullName>
    <externalId>true</externalId>
    <label>RV Joomla ID</label>
    <length>225</length>
    <type>Text</type>
</CustomField>